# ediel

./: .gitignore  .pre-commit-config.yaml  README.md  deploy_to_pypi.sh  pyproject.toml  requirements.txt  setup.py  test.py
ediel/: __init__.py  ediel.py  filename.py  mig.py  misc.py  twowire.py  uniformat.py
src/ediel/: misc.py
